// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RuleResources renders with {
  url: 'test-url',
  guidanceLinks: [ [length]: 0 ],
  linkComponent: 'ExternalLink'
} 1`] = `
<DocumentFragment>
  <div
    class="ruleMoreResources"
  >
    <div
      class="moreResourcesTitle"
    >
      Resources for this rule
    </div>
    <span
      class="ruleDetailsId"
    >
      <mock-externallink
        href="test-url"
      >
        More information about some-rule
      </mock-externallink>
    </span>
    <span
      class="ruleGuidance"
    >
      <mock-guidancelinks
        links=""
      />
      <mock-guidancetags
        deps="[object Object]"
        links=""
      />
    </span>
  </div>
</DocumentFragment>
`;

exports[`RuleResources renders with {
  url: 'test-url',
  guidanceLinks: [ [length]: 0 ],
  linkComponent: 'ExternalLink'
}: GuidanceLinks props 1`] = `
{
  "LinkComponent": [MockFunction] {
    "calls": [
      [
        {
          "children": [
            "More information about ",
            "some-rule",
          ],
          "href": "test-url",
        },
        {},
      ],
    ],
    "results": [
      {
        "type": "return",
        "value": <mock-ExternalLink
          href="test-url"
        >
          More information about 
          some-rule
        </mock-ExternalLink>,
      },
    ],
  },
  "links": [],
}
`;

exports[`RuleResources renders with {
  url: 'test-url',
  guidanceLinks: [ [length]: 0 ],
  linkComponent: 'ExternalLink'
}: GuidanceTags props 1`] = `
{
  "deps": {
    "LinkComponent": [MockFunction] {
      "calls": [
        [
          {
            "children": [
              "More information about ",
              "some-rule",
            ],
            "href": "test-url",
          },
          {},
        ],
      ],
      "results": [
        {
          "type": "return",
          "value": <mock-ExternalLink
            href="test-url"
          >
            More information about 
            some-rule
          </mock-ExternalLink>,
        },
      ],
    },
  },
  "links": [],
}
`;

exports[`RuleResources renders with {
  url: 'test-url',
  guidanceLinks: [ { href: 'test-href' }, [length]: 1 ],
  linkComponent: 'ExternalLink'
} 1`] = `
<DocumentFragment>
  <div
    class="ruleMoreResources"
  >
    <div
      class="moreResourcesTitle"
    >
      Resources for this rule
    </div>
    <span
      class="ruleDetailsId"
    >
      <mock-externallink
        href="test-url"
      >
        More information about some-rule
      </mock-externallink>
    </span>
    <span
      class="ruleGuidance"
    >
      <mock-guidancelinks
        links="[object Object]"
      />
      <mock-guidancetags
        deps="[object Object]"
        links="[object Object]"
      />
    </span>
  </div>
</DocumentFragment>
`;

exports[`RuleResources renders with {
  url: 'test-url',
  guidanceLinks: [ { href: 'test-href' }, [length]: 1 ],
  linkComponent: 'ExternalLink'
}: GuidanceLinks props 1`] = `
{
  "LinkComponent": [MockFunction] {
    "calls": [
      [
        {
          "children": [
            "More information about ",
            "some-rule",
          ],
          "href": "test-url",
        },
        {},
      ],
    ],
    "results": [
      {
        "type": "return",
        "value": <mock-ExternalLink
          href="test-url"
        >
          More information about 
          some-rule
        </mock-ExternalLink>,
      },
    ],
  },
  "links": [
    {
      "href": "test-href",
    },
  ],
}
`;

exports[`RuleResources renders with {
  url: 'test-url',
  guidanceLinks: [ { href: 'test-href' }, [length]: 1 ],
  linkComponent: 'ExternalLink'
}: GuidanceTags props 1`] = `
{
  "deps": {
    "LinkComponent": [MockFunction] {
      "calls": [
        [
          {
            "children": [
              "More information about ",
              "some-rule",
            ],
            "href": "test-url",
          },
          {},
        ],
      ],
      "results": [
        {
          "type": "return",
          "value": <mock-ExternalLink
            href="test-url"
          >
            More information about 
            some-rule
          </mock-ExternalLink>,
        },
      ],
    },
  },
  "links": [
    {
      "href": "test-href",
    },
  ],
}
`;

exports[`RuleResources renders with {
  url: null,
  guidanceLinks: [ [length]: 0 ],
  linkComponent: 'ExternalLink'
} 1`] = `<DocumentFragment />`;

exports[`RuleResources renders with {
  url: null,
  guidanceLinks: [ [length]: 0 ],
  linkComponent: 'ExternalLink'
}: GuidanceLinks props 1`] = `undefined`;

exports[`RuleResources renders with {
  url: null,
  guidanceLinks: [ [length]: 0 ],
  linkComponent: 'ExternalLink'
}: GuidanceTags props 1`] = `undefined`;

exports[`RuleResources renders with {
  url: null,
  guidanceLinks: [ { href: 'test-href' }, [length]: 1 ],
  linkComponent: 'NewTabLink'
} 1`] = `
<DocumentFragment>
  <div
    class="ruleMoreResources"
  >
    <div
      class="moreResourcesTitle"
    >
      Resources for this rule
    </div>
    <span
      class="ruleGuidance"
    >
      <mock-guidancelinks
        links="[object Object]"
      />
      <mock-guidancetags
        deps="[object Object]"
        links="[object Object]"
      />
    </span>
  </div>
</DocumentFragment>
`;

exports[`RuleResources renders with {
  url: null,
  guidanceLinks: [ { href: 'test-href' }, [length]: 1 ],
  linkComponent: 'NewTabLink'
}: GuidanceLinks props 1`] = `
{
  "LinkComponent": [Function],
  "links": [
    {
      "href": "test-href",
    },
  ],
}
`;

exports[`RuleResources renders with {
  url: null,
  guidanceLinks: [ { href: 'test-href' }, [length]: 1 ],
  linkComponent: 'NewTabLink'
}: GuidanceTags props 1`] = `
{
  "deps": {
    "LinkComponent": [Function],
  },
  "links": [
    {
      "href": "test-href",
    },
  ],
}
`;

exports[`RuleResources renders with { url: 'test-url', guidanceLinks: null, linkComponent: 'NewTabLink' } 1`] = `
<DocumentFragment>
  <div
    class="ruleMoreResources"
  >
    <div
      class="moreResourcesTitle"
    >
      Resources for this rule
    </div>
    <span
      class="ruleDetailsId"
    >
      <a
        class="ms-Link insights-link root-109"
        href="test-url"
        target="_blank"
      >
        More information about some-rule
      </a>
    </span>
    <span
      class="ruleGuidance"
    >
      <mock-guidancelinks />
      <mock-guidancetags
        deps="[object Object]"
      />
    </span>
  </div>
</DocumentFragment>
`;

exports[`RuleResources renders with { url: 'test-url', guidanceLinks: null, linkComponent: 'NewTabLink' }: GuidanceLinks props 1`] = `
{
  "LinkComponent": [Function],
  "links": null,
}
`;

exports[`RuleResources renders with { url: 'test-url', guidanceLinks: null, linkComponent: 'NewTabLink' }: GuidanceTags props 1`] = `
{
  "deps": {
    "LinkComponent": [Function],
  },
  "links": null,
}
`;

exports[`RuleResources renders with { url: null, guidanceLinks: null, linkComponent: 'NewTabLink' } 1`] = `<DocumentFragment />`;

exports[`RuleResources renders with { url: null, guidanceLinks: null, linkComponent: 'NewTabLink' }: GuidanceLinks props 1`] = `undefined`;

exports[`RuleResources renders with { url: null, guidanceLinks: null, linkComponent: 'NewTabLink' }: GuidanceTags props 1`] = `undefined`;
